================================================================================
CHANGELOG
================================================================================

	0.4.0.1
	Mar 2, 2009

	* Fixed bug in converting the duration in LilyPond.from_NoteContainer. 
	Closed #37.

================================================================================

	0.4
	Mar 1, 2009

	* Gone through and updated all the documentation and added tutorials
        for every finished module. Closed issue #22.

================================================================================

	0.3.9.2
	Mar 1, 2009

	* core/progressions.py: Factored out and added fixes for substitutions.
	Closed #21.
	* extra/LilyPond.py: Closed #34 and #35. Added fix for saving filenames
	with spaces in them, and converting octaves. 
	Thanks to Stefan Huchler for reporting these.


================================================================================

	0.3.9.1
	Feb 16, 2009

	* MANIFEST.in: Now includes the CHANGELOG in the source distribution as 
	suggested by Stefan Huchler.

================================================================================

	0.3.9.0
	Jan 26, 2009

	* extra/LilyPond.py: Using the new note value module to correctly 
	print tuplets and dotted notes (issue #28).

================================================================================

	0.3.8.9
	Jan 20, 2009

	* containers/Note.py: Fix in transpose function.
	(http://groups.google.com/group/mingus-python/t/60cd407eeadc0b3e)
	* containers/NoteContainer.py: Return self after using the + and - 
	operators.


================================================================================

	0.3.8.8
	Jan 19, 2009
	
	* midi/fluidsynth.py: Renamed default_bpm function argument to bpm.
	(http://groups.google.com/group/mingus-python/t/cb8784584330d42d)
	* containers/Note.py: Removed velocity and channel from dynamics.
	* core/progressions.py: Added substitute_harmonic.
